added discount code and children classes